# Agent_86

./: .env.example  .gitignore  DEPENDENCIES.md  GUIDANCE_ARCHITECTURE.md  PAIRED_TESTING_STRATEGY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_agent.py  setup.bat  setup.sh
.github/: copilot-instructions.md
src/: __init__.py  agent.py  config.py  llm.py  main.py  tools.py
tests/: __init__.py  conftest.py  deepeval_gpt5_nano.py  test_agent.py  test_config.py  test_deepeval.py  test_tool_call_parsing.py  test_tool_call_parsing_deepeval.py  test_tools.py
